[package]
name = "dfrs"
version = "0.0.7"
description = "Display file system space usage using graphs and colors"
authors = ["anthraxx <levente@leventepolyak.net>"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/anthraxx/dfrs"
homepage = "https://github.com/anthraxx/dfrs"
categories = ["command-line-utilities"]
keywords = ["df", "disk", "disk-usage"]

[dependencies]
nix = "0.25"
anyhow = "1.0"
colored = "2.0"
clap = { version = "^4.0", features = ["derive", "wrap_help"] }
clap_complete = "^4.0"
log = "0.4"
env_logger = "0.9"
strum = "0.24"
strum_macros = "0.24"
lazy_static = "1.4"
# termcolor = "1.0"

[profile.release]
lto = true
codegen-units = 1
