[package]
name = "dfrs"
version = "0.0.7"
description = "Display file system space usage using graphs and colors"
authors = ["anthraxx <levente@leventepolyak.net>"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/anthraxx/dfrs"
homepage = "https://github.com/anthraxx/dfrs"
categories = ["command-line-utilities"]
keywords = ["df", "disk", "disk-usage"]

[dependencies]
nix = { version = "0.29", features = ["fs"] }
anyhow = "1.0"
colored = "2.1"
clap = { version = "^4.5", features = ["derive", "wrap_help"] }
clap_complete = "^4.5"
log = "0.4"
env_logger = "0.11"
strum = "0.26"
strum_macros = "0.26"
lazy_static = "1.4"
# termcolor = "1.0"

[profile.release]
lto = true
codegen-units = 1
